# moords

./: .git_ignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  test.ipynb  tox.ini
data/mooring_elements/: mooring_elements_data.csv
docs/: conf.py  index.rst
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree
matlab_plot/: design_to_mdd_python.m  plot_static_python.m  run_plot_code.m
matlab_plot/instruments/: draw_instrument.asv  draw_instrument.m  render_instrument.m  render_instrument2.m
matlab_plot/plot formatting/: PlotLayout.m  PlotLayoutCell.m  RepositionPlotLayout.m  actually_linkaxes.m  rplt.m
matlab_plot/transformations/: rotate_instrument.m  rotation_matrix.m  scale_instrument.m  shift_instrument.m  surf2vector.m  vector2surf.m
notebooks/: design_example.ipynb  design_fieldwork.ipynb
output/example/export/: M1.csv  M2.csv
output/example/print/: example_tables.aux  example_tables.tex
output/fieldwork/export/: L245.csv  N280.csv  S245.csv  W310.csv
output/fieldwork/print/: fieldwork_tables.aux  fieldwork_tables.tex
src/moords/: __init__.py  format_data.py  mooring_design.py  overview_main.py  overview_to_pdf.py  overview_tools.py  plot_design.py  simulate_main.py  simulation_data.py  simulation_dynamics.py  simulation_plot.py
tests/: test_design_workflow.py  test_simulate_instance.py  test_simulation_workflow.py
