[project]
name = "moords"
version = "0.1.0"
description = "A mooring design and simulation package"
authors = [
    {name = "Rick de Kreij"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=1.23.0,<3.0.0)",
    "pandas (>=2.2.0,<3.0.0)",
    "scipy (>=1.8.0,<2.0.0)",
    "matplotlib (>=3.5.0,<4.0.0)",
    "xarray (>=2024.02.0,<2026.0.0)",
    "netcdf4 (>=1.6.0,<2.0.0)"
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]  # Linting rules: Errors, Warnings, Pyflakes, and Isort

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"
pre-commit = "^4.1.0"
sphinx = "^8.1.3"
sphinx-autodoc-typehints = "^3.0.1"
sphinx-rtd-theme = "^3.0.2"
tox = "^4.24.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
